# ducklog

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  compiler.md  consumers.md  providers.md  rosetta-stone.md
examples/: 01-file-permissions.sql  02-mode-tool-cascade.sql  03-diff-two-worlds.sql  04-hierarchy-descent.sql  05-comparison-types.sql
examples/compile/: compile_world.py  sample-policy.umw
examples/compile/sources/: modes.toml  tools.json
schema/: policy.sql  seed-vocabulary.sql
src/ducklog/: compiler.py
src/ducklog.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ducklog/consumers/: kibitzer.py  lackpy.py
tests/: conftest.py  test_audit_view_integrity.py  test_compiler.py  test_enforcement.py  test_kibitzer_consumer.py  test_lackpy_consumer.py  test_roundtrip.py
